# trend-lab-taskforge-agent-task-linter-260612

./: README.md  pyproject.toml
src/taskforge/: main.py
tests/: test_smoke.py
